--- a/index.html
+++ b/index.html
@@ -2,31 +2,54 @@
 <html lang="en" ng-app="ToDo">
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Extremely Minimal "To-do List" App in AngularJS</title>
-
+    <!-- Bootstrap -->
+    <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
     <style type="text/css">
-    .completed{text-decoration: line-through; color: red}
+    .completed{text-decoration: line-through; color: #FF8080}
     </style>
   </head>
   <body ng-controller="toDoController">
     <script src="bower_components/angular/angular.min.js"></script>
     <script src="js/app.js"></script>
-    <div>
-      <h1>To-do List</h1>
-      <form name="add-todo-form" ng-submit="addToDo()">
-        <input type="text" name="newtodo" ng-model="newToDo" required />
-        <br>
-        <button ng-disabled="add-todo-form.$invalid">Create New To-do</button>
-      </form>
-      <button ng-click="clearCompleted()">Clear Completed To-dos</button>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-6">
+          <h2><span class="glyphicon glyphicon-ok"></span> The Super Duper To-do List App</h2>
+          <form name="add-todo-form" ng-submit="addToDo()">
+            <div class="panel panel-default">
+              <div class="panel-body">
+                <input class="form-control" type="text" placeholder="Enter to-do item here..." name="newtodo" ng-model="newToDo" required autofocus />
+                <button class="btn form-control btn-success" ng-disabled="add-todo-form.$invalid">Create</button>
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-6">
+          <h3>To-do List <small><span class="badge">{{ todos.length }}</span></small></h3>
+          <ul class="list-group" style="list-style: none;" >
+            <li class="list-group-item" ng-repeat="todo in todos">
+              <input type="checkbox" ng-model="todo.completed" />
+              <span ng-class="{'completed': todo.completed}">{{ todo.title }}</span>
+            </li>
+          </ul>
+          <button class="btn form-control btn-danger" ng-click="clearCompleted()">Clear Completed</button>
+        </div>
+      </div>
     </div>
-    <div>
-      <ul style="list-style: none;" >
-        <li ng-repeat="todo in todos">
-          <input type="checkbox" ng-model="todo.completed" />
-          <span ng-class="{'completed': todo.completed}">{{ todo.title }}</span>
-        </li>
-      </ul>
-    </div>
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
   </body>
 </html>
