--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 <head>
   <title>Angular Todo Application</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <script type="text/javascript" src="/jst.js"></script>
+  <script src="/js/dependencies/sails.io.js"></script>
+  <script src="/bower_components/jquery/dist/jquery.js"></script>
+  <script src="/bower_components/angular/angular.js"></script>
+  <script src="/bower_components/angular-route/angular-route.js"></script>
+  <script src="/bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+  <script src="/js/app.js"></script>
 
   <link rel="stylesheet" href="/styles/bootstrap.css">
   <link rel="stylesheet" href="/styles/importer.css">
@@ -10,13 +17,28 @@
 </head>
 <body>
  <div ng-view></div>
- <script type="text/javascript" src="/jst.js"></script>
- <script src="/js/dependencies/sails.io.js"></script>
- <script src="/bower_components/jquery/dist/jquery.js"></script>
- <script src="/bower_components/angular/angular.js"></script>
- <script src="/bower_components/angular-route/angular-route.js"></script>
- <script src="/bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
- <script src="/js/app.js"></script>
+  <div class="container" ng-controller="TodoCtrl as todo">
+    <div class="jumbotron">
+        <h1 align="center">Todo Application</h1>
+        <br>
+        <div id="todo-form" class="row">
+            <div class="col-sm-8 col-sm-offset-2 text-center">
+                
+            </div>
+        </div>
+    </div>
+    <div id="todo-list" class="row">
+        <div class="col-sm-4 col-sm-offset-4">
+            <div class="checkbox" ng-repeat="singleTodo in todos">
+                <label>
+                    <input type="checkbox" ng-click="todo.removeTodo(singleTodo)">
+                    {{ singleTodo.value }}
+                </label>
+            </div>
+        </div>
+    </div>
+</div>
+ 
 
 </body>
 </html>
