--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <script src="bower_components/angular/angular.min.js"></script>
     <link href="bower_components/angular-xeditable/dist/css/xeditable.css" rel="stylesheet">
     <script src="bower_components/angular-xeditable/dist/js/xeditable.js"></script>
-    <script src="js/app.js"></script>
+    <script src="app.js"></script>
     <div class="container">
       <div class="row">
         <div class="col-sm-6">
