add footer and edit README

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Extremely Minimal "To-do List" App in AngularJS</title>
     <!-- Bootstrap -->
     <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -51,6 +52,14 @@
           <button class="btn form-control btn-danger" ng-click="clearCompleted()">Clear Completed</button>
         </div>
       </div>
+      <footer class="navbar-default navbar-fixed-bottom">
+        <div class="container">
+          <span><small>Christopher Comella &copy; 2015</small></span>
+          <a href="http://github.com/chrisco"><span class="btn fa fa-github"></span></span></a>
+          <a href="http://linkedin.com/in/comella"><span class="btn fa fa-twitter-square"></span></span></a>
+          <a href="http://twitter.com/chrisco"><span class="btn fa fa-twitter-square"></span></span></a>
+        </div>
+      </footer>
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
