tweak index.html and upload new screenshot to README

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Extremely Minimal "To-do List" App in AngularJS</title>
+    <title>The Super Duper To-do List App</title>
     <!-- Bootstrap -->
     <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
@@ -56,7 +56,7 @@
         <div class="container">
           <span><small>Christopher Comella &copy; 2015</small></span>
           <a href="http://github.com/chrisco"><span class="btn fa fa-github"></span></span></a>
-          <a href="http://linkedin.com/in/comella"><span class="btn fa fa-twitter-square"></span></span></a>
+          <a href="http://linkedin.com/in/comella"><span class="btn fa fa-linkedin-square"></span></span></a>
           <a href="http://twitter.com/chrisco"><span class="btn fa fa-twitter-square"></span></span></a>
         </div>
       </footer>
